release 1.3 (06-2010)
- Remove the restriction that a GET method cannot receive entities. Warnings
  will be presented instead of errors. Although this is highly uncommon The HTTP
  spec does not rule this out thus Jersey was being unduly restrictive.
- Fixed issue 543
  https://jersey.dev.java.net/issues/show_bug.cgi?id=543
  unable to build extended-wadl-webapp sample
- Fixed issue 293
  https://jersey.dev.java.net/issues/show_bug.cgi?id=293
  The response building will retain the StatusType (if explictly set) or those
  defined on javax.ws.rs.core.Response.Status. The container may access the
  StatusType via ContainerResponse.getStatusType and from that the reason
  phrase can be obtained.
  The servlet container will use the reason phrase for the message parameter
  of the call to HttpServletResponse.sendError for the case when the
  status code >= 400 and the servlet container is deployed as a servlet
  (sendError does not work on some web containers when the servlet container is
  deployed as a filter).
- Fixed issue 472
  https://jersey.dev.java.net/issues/show_bug.cgi?id=472
  Ensure that preconditions with GET then a PUT with If-Unmodified-Since works
  correctly at the granularity of seconds.
  The last modified date is rounded down to the nearest second when comparing
  against If-Modified-Since or If-Unmodified-Since values.
  (HTTP formatted dates are rounded down to the nearest second.)
  This can result in lost updates if two or more PUTs occur within an interval
  of a second. The application should use etags in such cases.
- ServiceFinder will defer to the defining class loader of the current class
  if a provider class cannot be loaded from the thread context class loader.
- Changed the declaration of components defined by jersey-multipart to use
  the META-INF/services service interface name to avoid the components being
  output in the logs.
- Fixed issue 488
  https://jersey.dev.java.net/issues/show_bug.cgi?id=488